--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "framer-motion": "^12.23.24",
     "gsap": "^3.13.0",
     "lucide-react": "^0.545.0",
-    "next": "15.5.5",
+    "next": "^16.1.6",
     "particles-bg": "^2.5.5",
     "pixi.js": "^8.14.1",
     "react": "19.1.0",
@@ -33,7 +33,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
-    "eslint-config-next": "15.5.5",
+    "eslint-config-next": "^16.1.6",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
